Update test view

--- a/src/app/sass/main.scss
+++ b/src/app/sass/main.scss
@@ -8,6 +8,11 @@
 
 * {
   font-family: monospace;
+  font-size: 12pt;
+}
+
+input[type=text] {
+  padding: 5px;
 }
 
 //noinspection SassScssUnresolvedVariable
